all tasks done without scrollbar bug

--- a/client/src/components/productCard/productCard.module.css
+++ b/client/src/components/productCard/productCard.module.css
@@ -8,6 +8,7 @@
     z-index: 10000000;
     background: gray;
     background-color: rgba(0, 0, 0, 0.5);
+    margin-top: -4em;
 }
 
 .container {
@@ -20,11 +21,10 @@
     background: white;
     border-radius: 8px;
     width: 768px;
-    height: 100vh;
     z-index: 300;
-    opacity: 2;
     position: absolute;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+    box-sizing: border-box;
 }
 
 .closeBtn {
@@ -86,6 +86,11 @@
     margin-bottom: 15px;
 }
 
+.color {
+    color: black;
+    font-weight: 600;
+}
+
 .sizes {
     display: flex;
     flex-wrap: wrap;
@@ -106,7 +111,7 @@
     transition: all 0.2s;
 }
 
-.size-box.selected{
+.size-box.selected {
     background: black;
     color: white;
 }
@@ -125,9 +130,13 @@
 .minus,
 .plus {
     border: 1px solid #bdbdbd;
-    padding: 10px 15px;
+    width: 35px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 3px;
     cursor: pointer;
-    user-select: none;
     background-color: #f9f9f9;
     color: #424242;
     font-size: 16px;
@@ -153,8 +162,7 @@
     padding: 10px 15px;
     border-top: 1px solid #bdbdbd;
     border-bottom: 1px solid #bdbdbd;
-    min-width: 30px;
-    height: 37px;
+    height: 35px;
     text-align: center;
     font-size: 15px;
     color: #212121;
@@ -181,41 +189,19 @@
     opacity: 0.85;
 }
 
-.colors-section {
-    margin-bottom: 15px;
+.categories {
     display: flex;
-    flex-direction: column;
-    gap: 6px;
-}
-
-.color-label {
-    font-size: 15px;
-    color: #212121;
-    font-weight: 600;
-}
-
-.color-options {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
     align-items: center;
+    justify-content: center;
+    gap: 5px;
 }
 
-.color-swatch {
-    width: 28px;
-    height: 28px;
-    border-radius: 50%;
-    border: 1px solid #e0e0e0;
-    cursor: pointer;
-    padding: 0;
-    transition: all 0.2s;
-    outline: none;
-    box-shadow: 0 0 0 0px transparent;
-}
-
-.color-swatch.selected {
-    border-color: black;
-    box-shadow: 0 0 0 1px white, 0 0 0 2px black;
+.category {
+    color: rgb(67, 67, 67);
+    background: rgb(225, 225, 225);
+    padding: 5px 10px;
+    border-radius: 20px;
+    font-size: 12px;
 }
 
 @media (max-width: 768px) {
@@ -225,7 +211,7 @@
     }
 
     .container {
-        margin-top: 100px;
+        top:200px;
         display: flex;
         flex-direction: column;
         position: relative;
@@ -233,7 +219,7 @@
     }
 
     .img {
-        min-height: 200px;
+        min-height: 500px;
     }
 
     .shop-form {
